# HelloOpenGL

./: .gitignore  .gitmodules  Build.py  CMakeLists.txt  Generate.bat  LICENSE.md  Launch.bat  LaunchVS2019.bat  README.md  Setup.bat  Setup.py
Cube/: CMakeLists.txt
Cube/Source/: Camera.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  ShaderLibrary.cpp
Data/Models/Craig/: Craig.fbx
Data/Shaders/: ModelVertexShader.glsl  Red.glsl  RedFragmentShader.glsl
Indices/: CMakeLists.txt
Indices/Source/: Main.cpp  Model.cpp  Model.h  RenderContext.cpp  RenderSurface.cpp  Vertex.h
Model/: CMakeLists.txt
Model/Source/: GLError.h  Model.cpp  Model.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  ShaderLibrary.cpp  Texture.cpp  Texture.h
Normals/: CMakeLists.txt
Normals/Source/: Model.cpp  Model.h  RenderContext.cpp  RenderSurface.cpp  ShaderLibrary.cpp  Vertex.h
Triangle/: CMakeLists.txt
Triangle/Source/: GLError.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h
source/: Engine.cpp  Engine.h  RenderContext.cpp  RenderSurface.cpp  RenderSurface.h  main.cpp
