cmake_minimum_required(VERSION 3.9)
enable_testing()

set_property(GLOBAL PROPERTY CXX_STANDARD 20)
set_property(GLOBAL PROPERTY CMAKE_CXX_STANDARD_REQUIRED ON)
set_property(GLOBAL PROPERTY CMAKE_CXX_EXTENSIONS OFF)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

project(HelloOpenGL)

set(DEP_DIR "${CMAKE_SOURCE_DIR}/Dependencies")

# GLFW
set(GLFW_BUILD_DOCS OFF CACHE BOOL "Generate docs" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Generate examples" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "Generate tests" FORCE)
set(GLFW_DIR "${DEP_DIR}/GLFW")
add_subdirectory("${GLFW_DIR}" GLFW)

# GLAD
set(GLAD_DIR "${DEP_DIR}/GLAD")
set(GLAD_BIN_DIR "${CMAKE_CURRENT_BINARY_DIR}/GLAD")
add_subdirectory("${GLAD_DIR}" GLAD)

# GLM
set(GLM_DIR "${DEP_DIR}/GLM")

# STB
set(STB_DIR "${DEP_DIR}/STB")

# TINYOBJ
set(TINYOBJ_DIR "${DEP_DIR}/TINYOBJ")

# ASSIMP
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "Build tools" FORCE)
set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "Build samples" FORCE)
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests" FORCE)
set(ASSIMP_NO_EXPORT ON CACHE BOOL "Export objects" FORCE)
set(ASSIMP_BUILD_FBX_IMPORTER ON CACHE BOOL "Import FBX" FORCE)
set(ASSIMP_BUILD_GLTF_IMPORTER OFF CACHE BOOL "Import GLTF" FORCE)
set(ASSIMP_BUILD_OBJ_IMPORTER OFF CACHE BOOL "Import OBJ" FORCE)
set(ASSIMP_BUILD_OGRE_IMPORTER OFF CACHE BOOL "Import OGRE" FORCE)
set(ASSIMP_BUILD_BLEND_IMPORTER OFF CACHE BOOL "Import BLEND" FORCE)
set(ASSIMP_BUILD_IRR_IMPORTER OFF CACHE BOOL "Import IRR" FORCE)
set(ASSIMP_DIR "${DEP_DIR}/ASSIMP")
add_subdirectory("${ASSIMP_DIR}" ASSIMP)

add_subdirectory(Triangle)
add_subdirectory(Cube)
add_subdirectory(Model)
add_subdirectory(Indices)